[package]
name = "ext4tool"
version = "1.0.0"
edition = "2021"
authors = ["ext4tool contributors"]
description = "Fast ext4 filesystem image extractor for Android/Linux/Windows"

[dependencies]
byteorder = "1.5"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
libc = "0.2"
uuid = { version = "1.10", features = ["v4"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
